--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<h1>Pokestonks</h1>
+<h1>
+  <a [routerLink]="'/'" (click)="searchInput.value = ''; searchResults.set([])"> Pokestonks </a>
+</h1>
 
 <form>
   <input
     type="text"
     placeholder="Search for a Pokemon"
     (input)="onSearchChange($any($event.target)?.value)"
+    #searchInput
   />
   <ul>
     @for (pokemon of searchResults(); track pokemon.key) {
