--- a/src/app/pokemon-metrics/pokemon-metrics.component.html
+++ b/src/app/pokemon-metrics/pokemon-metrics.component.html
@@ -6,21 +6,18 @@
       <h2>{{ pokemon().name }}</h2>
       <p>{{ pokemon().slogan }}</p>
       <p>Operating margin: {{ pokemon().operatingMarginPercent }}%</p>
-      <p>
+      <p>Stock price: <app-poke-dollars [amount]="pokemon().lastTradePokeDollars" /></p>
+      <!-- <p>
         Stock price: {{ pokemon().lastTradePokeDollars
         }}<img src="poke-dollar-v2.webp" width="12px" />
-      </p>
+      </p> -->
       <p>Total shares: {{ pokemon().totalShares }}</p>
       <p>Available shares: {{ pokemon().availableShares }}</p>
-      <p>
-        Market cap: {{ pokemon().marketCapPokeDollars | currency: "" : "" : "1.0-0"
-        }}<img src="poke-dollar-v2.webp" width="12px" />
-      </p>
-      <p>Bid: {{ pokemon().bidPokeDollars }}<img src="poke-dollar-v2.webp" width="12px" /></p>
-      <p>Ask: {{ pokemon().askPokeDollars }}<img src="poke-dollar-v2.webp" width="12px" /></p>
+      <p>Market cap: <app-poke-dollars [amount]="pokemon().marketCapPokeDollars" /></p>
+      <p>Bid: <app-poke-dollars [amount]="pokemon().bidPokeDollars" /></p>
+      <p>Ask: <app-poke-dollars [amount]="pokemon().askPokeDollars" /></p>
     </div>
   } @else {
-    <!-- <img src="poke/ditto2.png" class="ditto-loader" /> -->
     <app-loader></app-loader>
   }
 </section>
