--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-<h1>
-  <a [routerLink]="'/'" (click)="searchInput.value = ''; searchResults.set([])"> Pokestonks </a>
-</h1>
+<div id="header">
+  <h1>
+    <a [routerLink]="'/'" (click)="searchInput.value = ''; searchResults.set([])"> Pokestonks </a>
+  </h1>
+  <div>
+    <p>Welcome, {{ currentUser().username }}</p>
+  </div>
+</div>
 
 <form>
   <input
