--- a/src/app/pokemon-metrics/pokemon-metrics.component.scss
+++ b/src/app/pokemon-metrics/pokemon-metrics.component.scss
@@ -9,6 +9,14 @@ section {
   flex-direction: row;
 }
 
+#current-transactions {
+  app-loader {
+    display: block;
+    height: 200px;
+    width: 200px;
+  }
+}
+
 #start-transaction {
   button {
     margin-left: 10px;
