--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -1,6 +1,6 @@
 .ditto-loader {
-  width: 100%;
-  height: 100%;
+  width: inherit;
+  height: inherit;
   background: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
   background-size: 200% 100%;
   animation: shimmer 1.5s infinite linear;
