--- a/src/app/pages/pokemon-buy/pokemon-buy.component.html
+++ b/src/app/pages/pokemon-buy/pokemon-buy.component.html
@@ -23,9 +23,53 @@
           <p>Total shares: {{ ask.shareCount }}</p>
           <p>Total cost: <app-poke-dollars [amount]="ask.totalCostPokeDollars" /></p>
           <p>Owner: {{ ask.ownerUsername }}</p>
-          <button>Buy</button>
+          <button (click)="selectedAsk.set(ask)">Buy</button>
         </li>
       }
     </ul>
   }
 </section>
+
+@if (selectedAsk()) {
+  <div class="pokedex-modal-backdrop">
+    <div class="pokedex-modal">
+      <div class="pokedex-modal-top-section"><div class="black-half-circle-top"></div></div>
+      <div class="pokedex-modal-middle-section">
+        <h2>Confirm Buy</h2>
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+          est laborum."
+        </p>
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+          est laborum."
+        </p>
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+          est laborum."
+        </p>
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+          est laborum."
+        </p>
+      </div>
+      <div class="pokedex-modal-bottom-section"><div class="black-half-circle-bottom"></div></div>
+    </div>
+  </div>
+}
