--- a/src/app/pages/pokemon-buy/pokemon-buy.component.html
+++ b/src/app/pages/pokemon-buy/pokemon-buy.component.html
@@ -32,7 +32,7 @@
 
 @if (selectedAsk()) {
   <div class="pokedex-modal-backdrop">
-    <div class="pokedex-modal">
+    <div class="pokedex-modal" [ngClass]="{ 'selection-confirmed': buyConfirmed() }">
       <div class="pokedex-modal-top-section"><div class="black-half-circle-top"></div></div>
       <div class="pokedex-modal-middle-section">
         <h2>Confirm Buy</h2>
@@ -68,6 +68,10 @@
           sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
           est laborum."
         </p>
+        <div class="modal-button-group">
+          <button class="modal-confirm-button" (click)="buyConfirmed.set(true)">Confirm</button>
+          <button class="modal-confirm-button" (click)="selectedAsk.set(null)">Cancel</button>
+        </div>
       </div>
       <div class="pokedex-modal-bottom-section"><div class="black-half-circle-bottom"></div></div>
     </div>
