--- a/src/app/shared/components/pokedex-modal/pokedex-modal.component.html
+++ b/src/app/shared/components/pokedex-modal/pokedex-modal.component.html
@@ -5,6 +5,7 @@
       'render-pokeball': renderPokeball,
       'animate-pokemon-shake': animatePokeballShake,
       'animate-pokemon-caught': animatePokemonCaught,
+      'animate-pokemon-escaped': animatePokemonEscape,
     }"
   >
     <div class="pokedex-modal-top-section"><div class="black-half-circle-top"></div></div>
