Parametrizes pokedex modal styles

--- a/src/app/pages/pokemon-buy/pokemon-buy.component.html
+++ b/src/app/pages/pokemon-buy/pokemon-buy.component.html
@@ -69,6 +69,9 @@
     } @else {
       <h2>Buy Failed</h2>
       <p>{{ pokemon().name }} got away!</p>
+      <p>
+        Ask no longer available. Please refresh the page to see the latest asks for this Pokemon.
+      </p>
       <div class="modal-button-group">
         <button
           class="modal-confirm-button"
