--- a/src/app/pages/pokemon-position/pokemon-position.component.html
+++ b/src/app/pages/pokemon-position/pokemon-position.component.html
@@ -5,10 +5,15 @@
   @if (!loading() && position()) {
     <h3>Your Current Position</h3>
     <p>Owned shares: {{ position()?.ownedSharesCount }}</p>
-    @if (position()!.ownedSharesCount > 0) {
-      <p>Valuation: <app-poke-dollars [amount]="valuation" /></p>
-      <p>Portfolio shares percentage: {{ position()?.portfolioSharesPercentage }}%</p>
-      <p>Portfolio valuation percentage: {{ position()?.portfolioValuePercentage }}%</p>
-    }
+    <p>
+      Valuation:
+      @if (valuation !== null) {
+        <app-poke-dollars [amount]="valuation!" />
+      } @else {
+        <i>not found</i>
+      }
+    </p>
+    <p>Portfolio shares percentage: <i>pending</i></p>
+    <p>Portfolio valuation percentage: <i>pending</i></p>
   }
 </section>
