--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -15,45 +15,47 @@
       ></app-poke-dollars>
     </p>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Pokemon</th>
-          <th>% total value</th>
-          <th>Value</th>
-          <th>Shares</th>
-          <th>Price</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (
-          position of portfolio()?.positionsByTotalDesc;
-          track position.pokemon.key
-        ) {
+    @if (portfolio()!.hasStocks) {
+      <table>
+        <thead>
           <tr>
-            <td>{{ position.pokemon.name }}</td>
-            <td>
-              {{
-                (position.totalValuePokeDollars /
-                  portfolio()!.totalValuePokeDollars) *
-                  100 | number: "1.1-1"
-              }}%
-            </td>
-            <td>
-              <app-poke-dollars
-                [amount]="position.totalValuePokeDollars"
-              ></app-poke-dollars>
-            </td>
-            <td>{{ position.ownedSharesCount }}</td>
-            <td>
-              <app-poke-dollars
-                [amount]="position.sharePricePokeDollars"
-              ></app-poke-dollars>
-            </td>
+            <th>Pokemon</th>
+            <th>% total value</th>
+            <th>Value</th>
+            <th>Shares</th>
+            <th>Price</th>
           </tr>
-        }
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          @for (
+            position of portfolio()?.positionsByTotalDesc;
+            track position.pokemon.key
+          ) {
+            <tr>
+              <td>{{ position.pokemon.name }}</td>
+              <td>
+                {{
+                  (position.totalValuePokeDollars /
+                    portfolio()!.totalValuePokeDollars) *
+                    100 | number: "1.1-1"
+                }}%
+              </td>
+              <td>
+                <app-poke-dollars
+                  [amount]="position.totalValuePokeDollars"
+                ></app-poke-dollars>
+              </td>
+              <td>{{ position.ownedSharesCount }}</td>
+              <td>
+                <app-poke-dollars
+                  [amount]="position.sharePricePokeDollars"
+                ></app-poke-dollars>
+              </td>
+            </tr>
+          }
+        </tbody>
+      </table>
+    }
   } @else {
     <app-loader></app-loader>
   }
